# Insurance-Support-Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
core/: conversation.py  exceptions.py  llm_client.py  logging_setup.py  settings.py  tracing.py
data/: db_setup.py  faq_setup.py  generator.py
graph/: builder.py  entity_extraction.py  state.py
graph/nodes/: database_agent.py  faq.py  greeting.py  intent_classifier.py  misc_nodes.py
prompts/: templates.py
tools/: db_tools.py  faq_tool.py
ui/: app.py
